--- a/docs/v0.1.md
+++ b/docs/v0.1.md
@@ -12,12 +12,12 @@
   - Vérifier que RabbitMQ est bien actif et accessible en se connectant avec guest:guest à http://localhost:15672
 - [ ] Construire un `Producer` capable d'envoyer des messages au Hub Santé
   - Connexion au Hub Santé sur `localhost:5672`
-  - Publication sur un exchange `hubsante` en mode `topic (voir [tutoriel 5](https://www.rabbitmq.com/tutorials/tutorial-five-python.html))
+  - Publication sur un exchange `hubsante` en mode `topic` (voir [tutoriel 5](https://www.rabbitmq.com/tutorials/tutorial-five-python.html))
   - *Routing Key* de la forme `$CLIENT_ID.out.$TYPE` avec `$TYPE` parmi message, info, ack
   - Marquer les messages comme persistents (voir [tutoriel 2](https://www.rabbitmq.com/tutorials/tutorial-two-python.html))
 - [ ] Construire un `Consumer` capable de lire et acquitter les messages reçus du Hub Santé
   - Connexion au Hub Santé sur `localhost:5672`
-  - Consommer d'un queue nommée sous la forme `$CLIENT_ID.in.$TYPE` avec `$TYPE` parmi message, info, ack
+  - Consommer d'une queue nommée sous la forme `$CLIENT_ID.in.$TYPE` avec `$TYPE` parmi message, info, ack
   - Acquitter les messages une fois que le Hub Santé ne doit plus tenter de les redélivrer en cas de problème
 
 ## Implémentation Java
@@ -29,3 +29,17 @@
   - Lancé avec `CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Producer run --args "$CLIENT_ID.out.message {'to': '$CLIENT_ID', 'content': 'test'}"`
 - [x] [`Consumer.java`](../src/main/java/com/hubsante/Consumer.java)
   - Lancé avec `CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID.in.message"`
+
+## Test
+```
+# Shell 1: run Hub Santé locally
+docker compose up
+
+# Shell 2: run Consumer
+CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID.in.message"
+
+# Shell 3: run Producer each time you want to send a message
+CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Producer run --args "$CLIENT_ID.out.message {'to': '$CLIENT_ID', 'content': 'test'}"
+
+# Test : confirm messages are read by Consumer + messages are correctly acked (through RabbitMQ interface)
+```
