🕰️ Making hubsante exchange durable

--- a/docs/v0.4.md
+++ b/docs/v0.4.md
@@ -1,5 +1,8 @@
 # v0.4: Transcodage
 
+## Changements
+- L'exchange `hubsante` est désormais `durable`. Les `Consumer`et `Producer` doivent donc modifier leur déclaration pour prendre ce paramètre en compte.
+
 ## Documentation
 - Le DST v0.1.1 contient des informations plus détaillées sur les versions et messages
 - Un [guide](https://www.baeldung.com/openssl-self-signed-cert) clair sur les certificats et `openssl`
