Add Windows syntax

--- a/docs/v0.4.md
+++ b/docs/v0.4.md
@@ -50,6 +50,7 @@ docker compose exec rabbitmq sh
 ```
 
 ### Consumer / Producer
+##### Linux / MAC OS
 ```bash
 ## Lancer un Consumer sur $CLIENT_ID.in.message
 CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID.in.message"
@@ -59,6 +60,20 @@ CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
 CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Producer run --args "$CLIENT_ID.out.message {'to': '$CLIENT_ID', 'senderId': '$CLIENT_ID', 'distributionId': '${CLIENT_ID}_messageId123', 'content': 'test'}"
+```
+
+##### Windows
+```bash
+## set variable
+set CLIENT_ID=Self-Sante
+## Lancer un Consumer sur $CLIENT_ID.in.message
+gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.message"
+
+## Lancer un Consumer sur $CLIENT_ID.in.ack
+gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.ack"
+
+## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
+gradle -Pmain=com.hubsante.Producer run --args "%CLIENT_ID%.out.message {'to': '%CLIENT_ID%', 'senderId': '%CLIENT_ID%', 'distributionId': '%CLIENT_ID%_messageId123', 'content': 'test'}"
 ```
 
 ### Certificats
