move asyncapi & json schema in models directory and fix paths

--- a/docs/v0.4.md
+++ b/docs/v0.4.md
@@ -17,20 +17,17 @@
 - [ ] Intégrer les classes correspondantes dans les `Producer` et `Consumer`
 
 ## Messages
-Le format des messages de la v0.4 est défini dans le fichier de spécifications AsyncAPI suivant : [`dispatcher/src/main/resources/hubsante.asyncapi.yaml`](../dispatcher/src/main/resources/hubsante.asyncapi.yaml)
+Le format des messages de la v0.4 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
 
 ## Implémentation Java
-<<<<<<< HEAD
 - [x] Voir la section [`Scripts utiles > Certificats`](#certificats)
   - CSR [`certs/client.csr`](../certs/client.csr) signée par la CA du Hub en [`certs/client.crt`](../certs/client.crt)
   - Transformé en [`certs/client.p12`](../certs/client.p12) utilisé par le `KeyManager`
   - Ajout du certificat du hub au `trustStore` du client ([détails](../certs/addToKeystore.md))
 - [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../client/src/main/java/com/hubsante/Utils.java)
 - [x] Evolution des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
-=======
 - [x] Le dossier [`models/`](../models) exploite le fichier de spécifications AsyncAPI pour générer les classes correspondantes
-- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
->>>>>>> main
+- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../disptacher/src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
 
 ## Test
 ```
