semantics : rename hub directory

--- a/docs/v0.5.md
+++ b/docs/v0.5.md
@@ -4,7 +4,7 @@
 - Une distinction a été opérée entre le code du hub lui-même, disponible dans `hub`, et le code exemple des `Consumer` et `Producer`, 
 désormais disponibles dans `/client`.
 - Chacun des deux sous-répertoires vient avec son propre fichier `build.gradle`, de façon à toujours pouvoir exécuter des tests localement.
-- Le code serveur, sous `/dispatcher`, s'appuie désormais sur le framework Spring. Cela permet une déclaration plus légère des Exchanges, 
+- Le code serveur, sous `/hub`, s'appuie désormais sur le framework Spring. Cela permet une déclaration plus légère des Exchanges, 
 des files et des Bindings, dans une unique classe de configuration `AmqpConfiguration`. 
 La configuration SSL est entièrement déléguée à Spring et s'appuie sur des propriétés définies dans le fichier `application.properties`.
 
@@ -29,15 +29,15 @@ Le format des messages de la v0.5 est défini dans le fichier de spécifications
     - Ajout du certificat du hub au `trustStore` du client ([détails](../certs/addToKeystore.md))
 - [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../client/src/main/java/com/hubsante/Utils.java)
 - [x] Evolution des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
-- [x] Prise en charge par Spring de la connexion TLS du hub via [`application.properties`](../dispatcher/src/main/resources/application.properties)
-- [x] Déclaration des files et exchanges RabbitMQ prise en charge par Spring via [`AmqpConfiguration`](../dispatcher/src/main/java/com/hubsante/dispatcher/config/AmqpConfiguration.java)
+- [x] Prise en charge par Spring de la connexion TLS du hub via [`application.properties`](../hub/src/main/resources/application.properties)
+- [x] Déclaration des files et exchanges RabbitMQ prise en charge par Spring via [`AmqpConfiguration`](../hub/src/main/java/com/hubsante/hub/config/AmqpConfiguration.java)
 - [x] Le dossier [`models/`](../models) exploite le fichier de spécifications AsyncAPI pour générer les classes correspondantes
-- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../dispatcher/src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
+- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../hub/src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
 
 ## Test
 ```
 # Shell 1: run Hub Santé locally
-cd dispatcher
+cd hub
 docker compose up
 
 # Shell 2: run *.in.message Target-Sante Consumer
@@ -59,7 +59,7 @@ Test : confirm messages are
 ## Scripts utiles
 ### Docker (RabbitMQ & Hub)
 ```bash
-## Reconstruire les images du Hub (se positionner dans le répertoire dispatcher)
+## Reconstruire les images du Hub (se positionner dans le répertoire /hub)
 gradle jibDockerBuild --image=hub-sante:hub
 
 ## Lancer le Hub
