make command line tests more explicit : distinguish Origin & Target clients

--- a/docs/v0.5.md
+++ b/docs/v0.5.md
@@ -79,28 +79,29 @@ L'interface [admin de RabbitMQ](http://localhost:15672) est accessible avec le c
 ## Depuis le répertoire ./client :
 
 ## Lancer un Consumer sur $CLIENT_ID.in.message
-CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.message"
+CLIENT_ID=Target; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.message"
 
 ## Lancer un Consumer sur $CLIENT_ID.in.ack
-CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.ack"
+CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.ack"
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
-CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/simpleMessage.json"
+CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/simpleMessage.json"
 ```
 
 ##### Windows
 ```bash
 ## Depuis le répertoire ./client
 
-## set variable
-set CLIENT_ID=Self-Sante
 ## Lancer un Consumer sur $CLIENT_ID.in.message
+set CLIENT_ID=Target
 gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.message"
 
 ## Lancer un Consumer sur $CLIENT_ID.in.ack
+set CLIENT_ID=Origin
 gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.ack"
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
+set CLIENT_ID=Origin
 gradle -Pmain=com.hubsante.Producer run --args "%CLIENT_ID%.out.message {'to': '%CLIENT_ID%', 'senderId': '%CLIENT_ID%', 'distributionId': '%CLIENT_ID%_messageId123', 'content': 'test'}"
 ```
 
