rename test message file

--- a/docs/v0.5.md
+++ b/docs/v0.5.md
@@ -85,7 +85,7 @@ CLIENT_ID=Target; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.
 CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.ack"
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
-CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/ackEventTest.json"
+CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/createEventMessage.json"
 ```
 
 ##### Windows
@@ -102,7 +102,7 @@ gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.ack"
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
 set CLIENT_ID=Origin
-gradle -Pmain=com.hubsante.Producer run --args "%CLIENT_ID%.out.message {'to': '%CLIENT_ID%', 'senderId': '%CLIENT_ID%', 'distributionId': '%CLIENT_ID%_messageId123', 'content': 'test'}"
+gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/createEventMessage.json"
 ```
 
 ### Certificats
