--- a/docs/v0.5.md
+++ b/docs/v0.5.md
@@ -23,38 +23,11 @@ La configuration SSL est entièrement déléguée à Spring et s'appuie sur des 
 Le format des messages de la v0.5 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
 
 ## Implémentation Java
-- [x] Voir la section [`Scripts utiles > Certificats`](#certificats)
-    - CSR [`certs/client.csr`](../certs/client.csr) signée par la CA du Hub en [`certs/client.crt`](../certs/client.crt)
-    - Transformé en [`certs/client.p12`](../certs/client.p12) utilisé par le `KeyManager`
-    - Ajout du certificat du hub au `trustStore` du client ([détails](../certs/addToKeystore.md))
-- [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../client/src/main/java/com/hubsante/Utils.java)
 - [x] Evolution des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
 - [x] Prise en charge par Spring de la connexion TLS du hub via [`application.properties`](../hub/src/main/resources/application.properties)
 - [x] Déclaration des files et exchanges RabbitMQ prise en charge par Spring via [`AmqpConfiguration`](../hub/src/main/java/com/hubsante/hub/config/AmqpConfiguration.java)
-- [x] Le dossier [`models/`](../models) exploite le fichier de spécifications AsyncAPI pour générer les classes correspondantes
-- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../hub/src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
-
-## Test
-```
-# Shell 1: run Hub Santé locally
-cd hub
-docker compose up
-
-# Shell 2: run *.in.message Target-Sante Consumer
-cd ../client
-CLIENT_ID=Target-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.message"
-
-# Shell 3: run *.in.ack Self-Sante Consumer
-CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.ack"
-
-# Shell 4: run Self-Sante Producer each time you want to send a message
-CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/simpleMessage.json"
-```
-Test : confirm messages are
-- read by message Target-Sante Consumer
-- sends Ack back to Hub
-- read by Self-Sante ack Consumer
-- all correctly technically ack-ed (check through [RabbitMQ UI](http://localhost:15672))
+- [x] Intégration des classes issues du modèle CISU dans [`com.hubsante.message`](../client/src/main/java/com/hubsante/message)
+- [x] Refactoring des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour manipuler les objets CISU.
 
 ## Scripts utiles
 ### Docker (RabbitMQ & Hub)
@@ -73,18 +46,32 @@ docker compose exec rabbitmq sh
 ```
 L'interface [admin de RabbitMQ](http://localhost:15672) est accessible avec le compte guest:guest.
 
+## Test
+Test : confirm messages are
+- read by message Target-Sante Consumer
+- sends Ack back to Hub
+- read by Self-Sante ack Consumer
+- all correctly technically ack-ed (check through [RabbitMQ UI](http://localhost:15672))
+
 ### Consumer / Producer
 ##### Linux / MAC OS
 ```bash
+## Depuis le répertoire ./hub
+# Shell 1
+docker compose up
+
 ## Depuis le répertoire ./client :
 
 ## Lancer un Consumer sur $CLIENT_ID.in.message
+# Shell 2
 CLIENT_ID=Target; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.message"
 
 ## Lancer un Consumer sur $CLIENT_ID.in.ack
+#Shell 3
 CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.ack"
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
+# Shell 4
 CLIENT_ID=Origin; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/createEventMessage.json"
 ```
 
