rollback docs & add warning

--- a/docs/v0.2.md
+++ b/docs/v0.2.md
@@ -1,3 +1,12 @@
+>**ATTENTION**
+\
+>**Ce document correspond à la version 0.2 du HubSante.**
+\
+> **Pour tester cette version, veuillez vous placer sur le tag correspondant :**
+\
+\
+> git checkout 0.2
+> 
 # v0.2: Acquittements fonctionnels
 
 ## Documentation
@@ -16,7 +25,7 @@
   - Ne pas envoyer un acquittement fonctionnel pour ces messages
 
 ## Messages
-Le format des messages de la v0.2 est basé sur de simples JSON et illustré dans [Message.java](../client/src/main/java/com/hubsante/Message.java)
+Le format des messages de la v0.2 est basé sur de simples JSON et illustré dans [Message.java](../src/main/java/com/hubsante/Message.java)
 ```json
 {
   "to": "Self-Sante",
@@ -27,9 +36,9 @@ Le format des messages de la v0.2 est basé sur de simples JSON et illustré dan
 ```
 
 ## Implémentation Java
-- [x] [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) envoyant des acquittements fonctionnels après le traitement des messages reçus
+- [x] [`Consumer.java`](../src/main/java/com/hubsante/Consumer.java) envoyant des acquittements fonctionnels après le traitement des messages reçus
   - in.message : `CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID.in.message"`
-- [x] [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) réceptionnant les acquittements fonctionnels
+- [x] [`Consumer.java`](../src/main/java/com/hubsante/Consumer.java) réceptionnant les acquittements fonctionnels
   - in.ack : `CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.Consumer run --args "$CLIENT_ID.in.ack"`
 
 ## Test
