--- a/docs/v0.3.md
+++ b/docs/v0.3.md
@@ -1,3 +1,12 @@
+>**ATTENTION**
+\
+>**Ce document correspond à la version 0.3 du HubSante.**
+\
+> **Pour tester cette version, veuillez vous placer sur le tag correspondant :**
+\
+\
+> git checkout 0.3
+
 # v0.3: Sécurisation par certificats et mTLS
 
 ## Documentation
@@ -6,7 +15,7 @@
 - La documentation de RabbitMQ sur TLS
   - [Globalement](https://www.rabbitmq.com/ssl.html)
   - Sur les clients [Java](https://www.rabbitmq.com/ssl.html#java-client) et [.NET](https://www.rabbitmq.com/ssl.html#dotnet-client)
-  - Pour [débugger](https://www.rabbitmq.com/troubleshooting-ssl.html) les connexions TLS 
+  - Pour [débugger](https://www.rabbitmq.com/troubleshooting-ssl.html) les connexions TLS
 
 ## Objectifs
 - [ ] Générer un certificat client signé par l'AC du Hub
@@ -24,8 +33,8 @@ Le format des messages de la v0.3 est identique à la [v0.2](v0.2.md).
   - CSR [`certs/client.csr`](../certs/client.csr) signée par la CA du Hub en [`certs/client.crt`](../certs/client.crt)
   - Transformé en [`certs/client.p12`](../certs/client.p12) utilisé par le `KeyManager`
   - Ajout du certificat du hub au `trustStore` du client ([détails](../certs/addToKeystore.md))
-- [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../client/src/main/java/com/hubsante/Utils.java)
-- [x] Evolution des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
+- [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../src/main/java/com/hubsante/Utils.java)
+- [x] Evolution des [`Consumer.java`](../src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
 
 ## Test
 Reproduire les tests de la [v0.2](v0.2.md).
