--- a/docs/v0.4.md
+++ b/docs/v0.4.md
@@ -1,9 +1,18 @@
+>**ATTENTION**
+\
+>**Ce document correspond à la version v0.4 du HubSante.**
+\
+> **Pour tester cette version, veuillez vous placer sur le tag correspondant :**
+\
+\
+> git checkout v0.4
+
 # v0.4: Transcodage
 
 ## Changements
 - L'exchange `hubsante` est désormais `durable`. Les `Consumer`et `Producer` doivent donc modifier leur déclaration pour prendre ce paramètre en compte.
 - `Consumer` et `Producer` sont désormais des classes indépendantes et sans `main`pour pouvoir être intégrées plus facilement à des codes les appelant différemment.
-- `ConsumerRun` et `ProducerRun` permettent de faire les appels aux nouvelles classes `Consumer` et `Producer` 
+- `ConsumerRun` et `ProducerRun` permettent de faire les appels aux nouvelles classes `Consumer` et `Producer`
 
 ## Documentation
 - Le DST v0.2 contient des informations détaillées
@@ -17,17 +26,11 @@
 - [ ] Intégrer les classes correspondantes dans les `Producer` et `Consumer`
 
 ## Messages
-Le format des messages de la v0.4 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
+Le format des messages de la v0.4 est défini dans le fichier de spécifications AsyncAPI suivant : [`src/main/resources/hubsante.asyncapi.yaml`](../src/main/resources/hubsante.asyncapi.yaml)
 
 ## Implémentation Java
-- [x] Voir la section [`Scripts utiles > Certificats`](#certificats)
-  - CSR [`certs/client.csr`](../certs/client.csr) signée par la CA du Hub en [`certs/client.crt`](../certs/client.crt)
-  - Transformé en [`certs/client.p12`](../certs/client.p12) utilisé par le `KeyManager`
-  - Ajout du certificat du hub au `trustStore` du client ([détails](../certs/addToKeystore.md))
-- [x] Logique de la connexion TLS ajoutée dans [`Utils.TLS.enableTLS`](../client/src/main/java/com/hubsante/Utils.java)
-- [x] Evolution des [`Consumer.java`](../client/src/main/java/com/hubsante/Consumer.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java) pour se connecter en TLS
 - [x] Le dossier [`models/`](../models) exploite le fichier de spécifications AsyncAPI pour générer les classes correspondantes
-- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../disptacher/src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
+- [x] Les classes sont ensuite intégrés dans [`com.hubsante.message`](../src/main/java/com/hubsante/message) et peuvent être utilisées facilement par les autres fichiers
 
 ## Test
 ```
@@ -43,11 +46,11 @@ CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT
 # Shell 4: run Self-Sante Producer each time you want to send a message
 CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/simpleMessage.json"
 ```
-Test : confirm messages are 
+Test : confirm messages are
 - read by message Target-Sante Consumer
 - sends Ack back to Hub
-- read by Self-Sante ack Consumer 
-- all correctly technically ack-ed (check through [RabbitMQ UI](http://localhost:15672)) 
+- read by Self-Sante ack Consumer
+- all correctly technically ack-ed (check through [RabbitMQ UI](http://localhost:15672))
 
 ## Scripts utiles
 ### Docker (RabbitMQ & Hub)
@@ -67,7 +70,6 @@ docker compose exec rabbitmq sh
 L'interface [admin de RabbitMQ](http://localhost:15672) est accessible avec le compte guest:guest.
 
 ### Consumer / Producer
-##### Linux / MAC OS
 ```bash
 ## Lancer un Consumer sur $CLIENT_ID.in.message
 CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT_ID.in.message"
@@ -77,20 +79,6 @@ CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ConsumerRun run --args "$CLIENT
 
 ## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
 CLIENT_ID=Self-Sante; gradle -Pmain=com.hubsante.ProducerRun run --args "$CLIENT_ID.out.message src/main/resources/simpleMessage.json"
-```
-
-##### Windows
-```bash
-## set variable
-set CLIENT_ID=Self-Sante
-## Lancer un Consumer sur $CLIENT_ID.in.message
-gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.message"
-
-## Lancer un Consumer sur $CLIENT_ID.in.ack
-gradle -Pmain=com.hubsante.Consumer run --args "%CLIENT_ID%.in.ack"
-
-## Envoyer un message sur $CLIENT_ID.out.message avec un Producer
-gradle -Pmain=com.hubsante.Producer run --args "%CLIENT_ID%.out.message {'to': '%CLIENT_ID%', 'senderId': '%CLIENT_ID%', 'distributionId': '%CLIENT_ID%_messageId123', 'content': 'test'}"
 ```
 
 ### Certificats
