init sprint branch

--- a/docs/v0.5.md
+++ b/docs/v0.5.md
@@ -1,3 +1,12 @@
+>**ATTENTION**
+\
+>**Ce document correspond à la version v0.4 du HubSante.**
+\
+> **Pour tester cette version, veuillez vous placer sur le tag correspondant :**
+\
+\
+> git checkout v0.5
+
 # v0.5: Transcodage
 
 ## Changements
