--- a/docs/v0.6.md
+++ b/docs/v0.6.md
@@ -1,12 +1,10 @@
 # v0.6: Transcodage et validation
 
 ## Changements
-- Une distinction a été opérée entre le code du hub lui-même, disponible dans `hub`, et le code exemple des `Consumer` et `Producer`,
-  désormais disponibles dans `/client`.
-- Chacun des deux sous-répertoires vient avec son propre fichier `build.gradle`, de façon à toujours pouvoir exécuter des tests localement.
-- Le code serveur, sous `/hub`, s'appuie désormais sur le framework Spring. Cela permet une déclaration plus légère des Exchanges,
-  des files et des Bindings, dans une unique classe de configuration `AmqpConfiguration`.
-  La configuration SSL est entièrement déléguée à Spring et s'appuie sur des propriétés définies dans le fichier `application.properties`.
+- Les clients RabbitMQ se connectent désormais au serveur en tant que users identifiés par le CN de leur certificat (authentification passwordless).
+  Le mécanisme est implémenté côté serveur RabbitMQ (cf [rabbitmq.conf](../hub/rabbitmq/rabbitmq.conf) et [enabled.plugins](../hub/rabbitmq/enabled_plugins)) et côté client (cf commit```*3ffd9706*``` ).
+- Implémentation de la logique de sérialisation / désérialisation JSON et XML côté serveur.
+
 
 ## Documentation
 - Le DST v0.2 contient des informations détaillées
