--- a/docs/v0.6.md
+++ b/docs/v0.6.md
@@ -1,7 +1,7 @@
 # v0.6: Transcodage et validation
 
 ## Changements
-- Les clients RabbitMQ se connectent désormais au serveur en tant que users identifiés par le CN de leur certificat (authentification passwordless).
+- Les clients RabbitMQ se connectent désormais au serveur en tant que _users_ identifiés par le CN de leur certificat (authentification _passwordless_).
   Le mécanisme est implémenté côté serveur RabbitMQ (cf [rabbitmq.conf](../hub/rabbitmq/rabbitmq.conf) et [enabled.plugins](../hub/rabbitmq/enabled_plugins)) et côté client (cf commit```*3ffd9706*``` ).
 - Implémentation de la logique de sérialisation / désérialisation JSON et XML côté serveur.
 
