--- a/docs/v0.6.md
+++ b/docs/v0.6.md
@@ -16,6 +16,7 @@
 ## Objectifs
 - [ ] Transcoder des messages entre JSON et XML
 - [ ] Implémenter une mécanique de validation (contre Json-schema ou XSD)
+- [ ] S'authentifier auprès du RabbitMQ avec son seul certificat (pas de nom d'utilisateur / mot de passe)
 
 ## Messages
 Le format des messages de la v0.6 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
