--- a/docs/v0.6.md
+++ b/docs/v0.6.md
@@ -8,10 +8,7 @@
 
 ## Documentation
 - Le DST v0.2 contient des informations détaillées
-- La documentation d'AsyncAPI
-    - Les [concepts](https://www.asyncapi.com/docs/concepts)
-    - Les [tutoriels](https://www.asyncapi.com/docs/tutorials)
-    - Les [spécifications](https://www.asyncapi.com/docs/reference/specification/v2.5.0)
+- La documentation de RabbitMQ sur le [contrôle d'accès](https://www.rabbitmq.com/access-control.html) et le [contrôle sur les certificats X.509](https://github.com/rabbitmq/rabbitmq-server/tree/main/deps/rabbitmq_auth_mechanism_ssl)
 
 ## Objectifs
 - [ ] Transcoder des messages entre JSON et XML
