--- a/docs/v0.6.md
+++ b/docs/v0.6.md
@@ -1,4 +1,4 @@
-# v0.6: Transcodage et validation
+# v0.6: Transcodage et validation, authentification par certificats
 
 ## Changements
 - Les clients RabbitMQ se connectent désormais au serveur en tant que _users_ identifiés par le CN de leur certificat (authentification _passwordless_).
