init sprint 7 branch

--- a/docs/v0.7.md
+++ b/docs/v0.7.md
@@ -1,36 +1,20 @@
->**ATTENTION**
-\
->**Ce document correspond à la version v0.6 du HubSante.**
-\
-> **Pour tester cette version, veuillez vous placer sur le tag correspondant :**
-\
-\
-> git checkout 0.6
-
-# v0.6: Transcodage et validation, authentification par certificats
+# v0.7: Intégration de l'enveloppe EDXL
 
 ## Changements
-- Les clients RabbitMQ se connectent désormais au serveur en tant que _users_ identifiés par le CN de leur certificat (authentification _passwordless_).
-  Le mécanisme est implémenté côté serveur RabbitMQ (cf [rabbitmq.conf](../hub/rabbitmq/rabbitmq.conf) et [enabled.plugins](../hub/rabbitmq/enabled_plugins)) et côté client (cf commit```*3ffd9706*``` ).
-- Implémentation de la logique de sérialisation / désérialisation JSON et XML côté serveur.
+- Modification des méthodes côté dispatcher et client pour intégrer l'ajout de l'enveloppe EDXL.
 
 
 ## Documentation
 - Le DST v0.2 contient des informations détaillées
-- La documentation de RabbitMQ sur le [contrôle d'accès](https://www.rabbitmq.com/access-control.html) et le [contrôle sur les certificats X.509](https://github.com/rabbitmq/rabbitmq-server/tree/main/deps/rabbitmq_auth_mechanism_ssl)
 
 ## Objectifs
-- [ ] Transcoder des messages entre JSON et XML
-- [ ] Implémenter une mécanique de validation (contre Json-schema ou XSD)
-- [ ] S'authentifier auprès du RabbitMQ avec son seul certificat (pas de nom d'utilisateur / mot de passe)
+- [ ] Intégrer l'enveloppe EDXL dans le modèle objet
 
 ## Messages
-Le format des messages de la v0.6 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
+Le format des messages de la v0.7 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
 
 ## Implémentation Java
-- [x] Ajout d'un service de sérialisation/ désérialisation de messages (uniquement CreateEventMessage à date) : [`JsonXmlConverter.java`](../hub/dispatcher/src/main/java/com/hubsante/hub/service/JsonXmlConverter.java). Il supporte également deux méthodes de validation (json schema & xsd).
-- [x] Ajout d'un template handlebars pour la génération d'un message xml (uniquement CreateEventMessage à date) : [`cisu-create-message.handlebars`](../hub/dispatcher/src/main/resources/template/cisu-create-message.handlebars).
-- [x] Ajout de la configuration du mapper Jackson dans le code exemple Java pour prendre en charge la bonne désérialisation des dates.
+- [x] 
 
 ## Scripts utiles
 ### Docker (RabbitMQ & Hub)
