--- a/docs/v0.7.md
+++ b/docs/v0.7.md
@@ -1,8 +1,8 @@
 # v0.7: Intégration de l'enveloppe EDXL
 
 ## Changements
+- Intégration de l'enveloppe EDXL pour encapsuler les messages
 - Modification des méthodes côté dispatcher et client pour intégrer l'ajout de l'enveloppe EDXL.
-
 
 ## Documentation
 - Le DST v0.2 contient des informations détaillées
@@ -14,7 +14,9 @@
 Le format des messages de la v0.7 est défini dans le fichier de spécifications AsyncAPI suivant : [`models/hubsante.asyncapi.yaml`](../models/hubsante.asyncapi.yaml)
 
 ## Implémentation Java
-- [x] 
+- [x] Ajout des classes du modèle EDXL ([`edxl`](../hub/dispatcher/src/main/java/com/hubsante/model/edxl))
+- [x] Ajout d'un service de sérialisation / désérialisation d'enveloppe EDXL contenant un message CISU (uniquement CreateEventMessage à date) : [`EdxlHandler.java`](../hub/dispatcher/src/main/java/com/hubsante/hub/service/EdxlHandler.java).
+- [x] Modification du code exemple Java pour manipuler des enveloppes EDXL ([`ConsumerRun.java`](../client/src/main/java/com/hubsante/ConsumerRun.java) et [`Producer.java`](../client/src/main/java/com/hubsante/Producer.java))
 
 ## Scripts utiles
 ### Docker (RabbitMQ & Hub)
