Ajout changelogs 0.8 et 0.9

--- a/docs/v0.8.md
+++ b/docs/v0.8.md
@@ -1,6 +1,37 @@
-> **Warning**
+> **Attention**
 >
 > **Ce document correspond à la version v0.8 du HubSante.**
 >
 > Pour tester cette version, veuillez vous placer sur le tag correspondant :
 > `git checkout 0.8`
+
+## Changements v0.8
+- Le langage de sérialisation (XML ou JSON) pour les échanges inter-forces est rendu configurable par client.
+
+- Désérialisation générique des messages.
+
+- Ajout d'un mécanisme de contrôle de cohérence entre l'émetteur effectif du message et le ***sender*** défini dans le corps de l'enveloppe EDXL.
+
+- Implémentation de l'access management côté RabbitMQ : des permissions spécifiques sur les files d'écoute sont associées à chaque utilisateur identifié par son certificat.
+
+- Approfondissement de la couverture de tests.
+
+- ajout DST 1.0
+
+## Implémentation Java
+- Configuration du langage de désérialisation. Le langage de sérialisation (XML ou JSON) pour les échanges inter-forces est rendu configurable par client.
+  Le langage par défaut est JSON, il est possible de le surcharger via un [fichier de configuration](../hub/dispatcher/src/main/jib/config/client.preferences.csv) 
+  porté par le Hub Santé. Les échanges internes au Hub Santé (15-15) se font systématiquement en JSON.
+
+
+- Désérialisation générique des messages : le Dispatcher est désormais en mesure de désérialiser le message métier correspondant à un cas d'usage donné
+  en inférant son type à partir de son contenu. Cette fonctionnalité est rendue possible par l'ajout d'une classe [EdxlInnerMessage](../models/src/main/java/com/hubsante/model/edxl/EdxlInnerMessage.java) définissant
+  des @JsonSubTypes pour chaque type de message métier héritant de cette classe.
+
+
+- Ajout d'un mécanisme de contrôle de cohérence entre l'émetteur effectif du message et le *sender* défini dans le corps de l'enveloppe EDXL. 
+  Ce contrôle est effectué par le Dispatcher avant de transmettre le message à la force destinataire. Si le contrôle échoue, le message est rejeté.
+  Ce contrôle est implémenté dans la méthode **checkSenderConsistency()** de la classe [Dispatcher](../hub/dispatcher/src/main/java/com/hubsante/hub/service/Dispatcher.java).
+
+## Documentation
+[DST 1.0](/docs/DST/23.05%20DST%20v1.0.0%20-%20Hub%20Santé%20&%20connecteurs.pdf)
